--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.25.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
