--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.25.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.14"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
