--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^14.7.0",
     "graphql-iso-date": "^3.6.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
